# chat-box

./: .gitignore  chatbox.db  config.py  main.py  pyproject.toml
api/: deps.py  lifespan.py
api/routes/: __init__.py  auth.py  core.py  files.py
api/services/: auth.py  files.py
db/: database.py  models.py
files/1/: example.txt
models/: File.py  User.py
